[search]검색 API 연동 완료

--- a/src/main/main.css
+++ b/src/main/main.css
@@ -6,6 +6,10 @@
 .navbar-letter {
     color: cyan;
 }
+
+a.navbar-logo {
+    color: rgb(116, 179, 238);
+}
   
 .main-jumbo {
     padding-top: 70px;
