--- a/src/search/search.css
+++ b/src/search/search.css
@@ -1,5 +1,5 @@
 .search-view {
-    padding-top: 100px;
+    padding-top: 90px;
     height: auto;
 }
 
@@ -8,8 +8,14 @@
     width: 30%;
 }
 
+.main-search {
+    height: calc(100vh - 230px);
+}
+
 .search-component {
-    height: calc(100vh - 150px);
+    /* height: calc(100vh - 140px); */
+    min-height: 100%;
+    position: relative;
 }
 
 .searchresult-body {
